# cg_test

./: .gitignore  CMakeLists.txt  cg_test.cu  check.cu  global.h  linalg_cpu.cu  linalg_cpu.h  linalg_gpu.cu  linalg_gpu.h
